# infra

./: .envrc  .gitignore  .markdown-link-check.json  .pre-commit-config.yaml  .sops.yaml  .yamllint.yaml  AGENTS.md  CLAUDE.md  CURRENT-STATUS.md  MIGRATION-PLAN.md  Makefile  ORGANIZATION.md  QUICK-REFERENCE.md  QUICK-START.md  README.md  REORGANIZATION-SUMMARY.md  deploy-scripts.sh  dotfiles-config.json  flake.nix  go.mod  homelab-media-pipeline-implementation.md  homelab-media-pipeline-plan.md  install-dotfiles-nostow.bash  install-dotfiles.bash  media-pipeline-quick-reference.md  media-pipeline-v2-implementation.md  reorganize.sh  transcoding-container-setup.md
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/skills/: ansible-workflow.md  nix-development.md  terraform-workflow.md
.github/workflows/: build-lxc-templates.yml
.private-journal/2025-11-08/: 17-36-11-003638.embedding  17-36-11-003638.md
.private-journal/2025-11-09/: 06-24-01-609234.embedding  06-24-01-609234.md  06-48-59-634083.embedding  06-48-59-634083.md  07-14-14-350102.embedding  07-14-14-350102.md
ai/: CLAUDE.md
ansible/: .ansible-lint  CLAUDE.md  ansible.cfg
ansible/files/: filebot_license.psm
ansible/group_vars/: lxc_containers.yml
ansible/inventory/: hosts.yml
ansible/playbooks/: analyzer.yml  authelia.yml  backup.yml  base-setup.yml  cloudflare-tunnel.yml  containers-base.yml  ct300-backup.yml  ct301-samba.yml  ct302-ripper.yml  ct303-analyzer.yml  ct304-transcoder.yml  ct305-jellyfin.yml  dns.yml  jellyfin.yml  lldap.yml  mealie.yml  pipeline-test.yml  proxmox-host.yml  proxmox-network.yml  proxy.yml  raspberry-pi-setup.yml  raspberry-pi-test.yml  ripper.yml  samba.yml  site.yml  storage.yml  sync-ssh-keys.yml  tailscale.yml  transcoder.yml  vault.yml  wishlist.yml
ansible/vars/: backup_secrets.yml  makemkv_secrets.yml.example  media_pipeline_ssh_secrets.yml  secrets.yml  vault_secrets.yml
apps/gramofonche-downloader/: pyproject.toml
apps/gramofonche-downloader/gramofonche_downloader/: __init__.py  __main__.py
apps/gramofonche-downloader/tests/: __init__.py  test_main.py
apps/healthlib/: .sops.yaml  README.md  pyproject.toml
apps/healthlib/docs/: data-reference.md
apps/healthlib/healthlib/: __init__.py  __main__.py  config.py  garmin.py  strava.py
apps/healthlib/tests/: __init__.py  test_config.py  test_garmin.py  test_strava.py  test_version.py
apps/healthlib/vars/: healthlib_secrets.sops.yaml  healthlib_secrets.sops.yaml.example
apps/media-pipeline/: .envrc  .gitignore  CLAUDE.md  go.mod  go.sum
apps/session-manager/: .envrc  CLAUDE.md  t
apps/zesh/: .envrc  CLAUDE.md  Cargo.toml
apps/zesh/src/: config.rs  discovery.rs  frecency.rs  main.rs  picker.rs  zellij.rs
cmd/media-pipeline/: main.go
cmd/mock-makemkv/: config.go  ffmpeg.go  ffmpeg_test.go  main.go  output_test.go
cmd/remux/: main.go
cmd/ripper/: main.go  main_test.go
cmd/transcode/: main.go
docs/: ripping-guide.md
docs/archive/: 2025-11-11-ct303-analyzer-deployment-results.md  2025-11-11-mergerfs-distribution-fix.md  2025-11-11-system-snapshot.md  2025-11-12-hardware-inventory.md  homelab-media-pipeline-implementation.md  homelab-shell-setup.md  ripper-deployment.md  wsl2-ssh-connectivity-issue.md
docs/containers/: README.md  ct300-backup.md  ct304-transcoder.md  ct305-jellyfin.md
dotfiles/: .gp.md  CLAUDE.md  README.md  dotfiles-config.json  install-dotfiles-nostow.bash  install-dotfiles.bash
home/: CLAUDE.md
images/: CLAUDE.md  flake.nix
nixos/: CLAUDE.md
notes/: README.md
scripts/: analyze-media.sh  check-updates.sh  clean-secrets.sh  configure-makemkv.sh  filebot-process.sh  lint.sh  migrate-staging.sh  organize-and-remux-tv.sh  promote-to-ready.sh  rip-disc.sh  setup-dev.sh  setup-test-env.sh  transcode-queue.sh
secrets/: devbox.yaml
terraform/: .sops.yaml  .tflint.hcl  CLAUDE.md  README.md  analyzer.tf  backup.tf  ct300-backup.tf  ct301-samba.tf  ct302-ripper.tf  ct303-analyzer.tf  ct304-transcoder.tf  ct305-jellyfin.tf  dns.tf  jellyfin.tf  main.tf  proxy.tf  ripper.tf  samba.tf  ssh_keys.tf  tailscale.tf  terraform.tfvars.example  transcoder.tf  users.yaml  variables.tf
test/: test-contracts.sh
(+660 files in other folders)
