[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gramofonche-downloader"
version = "0.1.0"
description = "Download Bulgarian audiobooks from gramofonche.chitanka.info"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "mutagen>=1.46",
]

[project.scripts]
gramofonche-downloader = "gramofonche_downloader.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "types-requests",
    "types-beautifulsoup4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.mypy]
python_version = "3.11"
strict = true
