[package]
name = "zesh"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Fast terminal session manager for zellij"
authors = ["Peter Petrov <peter@petrovs.io>"]
license = "MIT"
repository = "https://github.com/cuivienor/infra"
keywords = ["zellij", "terminal", "session-manager", "tmux"]
categories = ["command-line-utilities"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Filesystem
ignore = "0.4"           # Fast directory walking (ripgrep's crate)
shellexpand = "3"        # ~/path expansion

# Picker
skim = "0.10"            # fzf clone in Rust

# Data
serde_json = "1"         # Frecency persistence

# Error handling
anyhow = "1"
thiserror = "2"

# Misc
dirs = "5"               # XDG paths

[dev-dependencies]
tempfile = "3"           # Temp files for tests

# Clippy lints - be strict about common issues
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Only allow truly noisy pedantic lints
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
similar_names = "allow"        # project1 vs projects is fine in tests

# Release profile optimizations
[profile.release]
lto = true              # Link-time optimization
codegen-units = 1       # Better optimization (slower compile)
strip = true            # Remove debug symbols
opt-level = 3           # Maximum optimization

[profile.dev]
opt-level = 0           # Fast compilation
debug = true            # Full debug info
